[package]
name = "serde_dwarf"
version = "0.0.0"
authors = ["agoetz <andy@andygoetz.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/apgoetz/serde_dwarf"
homepage = "https://github.com/apgoetz/serde_dwarf"
description = "Provide generic serde Deserializer for Non-self describing formats"

[dependencies]
fallible-iterator = "0.2.0"
gimli = "0.23.0"
id-arena = "2.2.1"
memmap = "0.7.0"
object = "0.23.0"
regex = "1.4.3"
rustc-demangle = "0.1.18"

[dev-dependencies]
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'thin' # fat lto currently breaks serde_dwarf
opt-level = 3 # <-
overflow-checks = false # <-
