[package]
name = "serde_dwarf"
version = "0.0.0"
authors = ["agoetz <andy@andygoetz.org>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/apgoetz/serde_dwarf"
homepage = "https://github.com/apgoetz/serde_dwarf"
description = "Provide generic serde Deserializer for Non-self describing formats"

[dependencies]
fallible-iterator = "0.2.0"
gimli = "0.23.0"
id-arena = "2.2.1"
memmap = "0.7.0"
object = "0.23.0"
rayon = "1.5.0"
regex = "1.4.3"
rustc-demangle = "0.1.18"
serde = { version = "1"}

[dev-dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_test = "1"
linkme = "0.2.4"
lazy_static = "1"
bincode = "1"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat' 
opt-level = 3 # <-
overflow-checks = false # <-
